fix bug on mobile cropped screen end of the page

--- a/css/sass/containers/_cards-containers.scss
+++ b/css/sass/containers/_cards-containers.scss
@@ -4,6 +4,7 @@
   padding: 20px;
   padding-left: 50px;
   //   background-color: yellow;
+  padding-bottom: 50px;
 
   @include mobile-design {
     padding: 0px;
